crud-from-the-dashboard

--- a/dashboard/src/index.css
+++ b/dashboard/src/index.css
@@ -734,7 +734,7 @@ hr {
 }
 
 .buy {
-  background-color: #4184f3;
+  background-color: #0f58cc;
   color: #fff;
   font-weight: 400;
   font-size: 0.8rem;
